refactor(collection): API 엔드포인트 수정 & toList() 사용 [WAPO-108]